--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./assets/consola-de-juego.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="../consola-de-juego.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Have Fun!</title>
   </head>
